--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant Website</title>
+    <title>Neko Cafe</title>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/7a4b62b0a4.js"
@@ -141,7 +141,7 @@
           <h3>Contact</h3>
           <ul>
             <li>Phone: 9504376000</li>
-            <li>Email: asmittbhardwaj@gmail.com</li>
+            <li>Email: <a href="mailto:asmittbhardwaj@gmail.com">asmittbhardwaj@gmail.com</a></li>
             <li>Other: <a href="https://asmit.carrd.co/">asmit.carrd.co</a></li>
           </ul>
         </div>
@@ -151,16 +151,16 @@
           <h3>Follow Us</h3>
           <div class="icon_container">
             <div class="icon">
-              <i class="fa fa-facebook"></i>
+              <a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
             </div>
             <div class="icon">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
             <div class="icon">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
+              <a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             </div>
             <div class="icon">
-              <i class="fa fa-youtube" aria-hidden="true"></i>
+              <a href="https://www.youtube.com"><i class="fa fa-youtube" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
