--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="link_lists">
           <h3>Contact</h3>
           <ul>
-            <li>Phone: <a href="phone:+919504376000">9504376000</a></li>
+            <li>Phone: <a href="tel:+919504376000">9504376000</a></li>
             <li>Email: <a href="mailto:asmittbhardwaj@gmail.com">asmittbhardwaj@gmail.com</a></li>
             <li>Other: <a href="https://asmit.carrd.co/">asmit.carrd.co</a></li>
           </ul>
@@ -168,3 +168,4 @@
     </footer>
   </body>
 </html>
+<!--SEND HELP-->
